--- a/assets/styles/general.css
+++ b/assets/styles/general.css
@@ -8,4 +8,19 @@ body {
     padding-bottom: 200px;
 }
 
- 
+
+main {
+     
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    max-width: 1003px;
+
+    display: flex;
+}
+
+p {
+    margin-left: 0;
+    margin-right: 0;
+}
